--- a/preamble.tex
+++ b/preamble.tex
@@ -28,9 +28,10 @@
 \crefname{remark}{Remark}{Remarks}
 \crefname{example}{Example}{Examples}
 \crefname{notation}{Notation}{Notations}
-\crefname{setup}{Setup}{Setup}
-\crefname{question}{Question}{Question}
-\crefname{convention}{Convention}{Convention}
+\crefname{setup}{Setup}{Setups}
+\crefname{question}{Question}{Questions}
+\crefname{convention}{Convention}{Conventions}
+\crefname{algorithm}{Algorithm}{Algorithms}
 \newcommand{\creflastconjunction}{, and\nobreakspace}
 
  %theorem style environments
